[package]
name = "mad_engine"
version = "0.1.0"
edition = "2021"
authors = ["Juguang Yan <coolyanjg@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-spdk = {path = "../async-spdk"}
crc = "3.0.0"
rocksdb = "0.18.0"
rayon = "1.5.3"
thread_local = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thread-pool="0.1"
scoped-tls = "1.0.0"
threadpool ="1.8"