[package]
name = "mad_engine"
version = "0.1.0"
edition = "2021"
authors = ["Juguang Yan <coolyanjg@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-spdk = {path = "../async_spdk"}
# async-spdk = {git = "https://github.com/madsys-dev/async-spdk", branch = "dev"}
crc = "3.0.0"
# rocksdb = "0.18.0"
# rocksdb = {git = "https://github.com/coolyjg/rust-rocksdb", branch="spdk-integration"}
rocksdb = {path = "../rust-rocksdb"}
rayon = "1.5.3"
thread_local = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thread-pool="0.1"
thiserror = "1.0"
scoped-tls = "1.0.0"
threadpool ="1.8"
rusty_pool = "0.7.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.8"